--- a/index.html
+++ b/index.html
@@ -1866,7 +1866,7 @@ input.sv[type="text"]{border:none;color:#333;background:none}
 		<div class="loginWrap-ofc" id="contents">
 						<!-- loginBox-ofc -->
 			<div class="loginBox-ofc">
-				<h1 class="head-ofc"><img id="logoimg" src="https://office.hiworks.com/btgin.com/common/logo/login" style="width: 225px; height: 61px" alt="hiworks"></h1>
+				<h1 class="head-ofc"><img id="logoimg" src="https://office.hiworks.com/${domain}/common/logo/login" style="width: 225px; height: 61px" alt="hiworks"></h1>
 				<div class="body-ofc">				
 					<ul class="save-ofc">
 						<li><input type="checkbox" name="user" id="office_remember"> <label for="office_remember">아이디 저장</label></li>
